# oxidris

./: .editorconfig  .gitignore  .markdownlintignore  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
crates/oxidris-ai/: Cargo.toml
crates/oxidris-ai/src/: board_analysis.rs  board_feature.rs  genetic.rs  lib.rs  metrics.rs  placement_analysis.rs  placement_evaluator.rs  session_evaluator.rs  turn_evaluator.rs  weights.rs
crates/oxidris-analysis/: Cargo.toml
crates/oxidris-analysis/src/: feature_builder.rs  index.rs  lib.rs  normalization.rs  sample.rs  session.rs  statistics.rs  survival.rs
crates/oxidris-cli/: Cargo.toml
crates/oxidris-cli/src/: analysis.rs  analyze_censoring.rs  data.rs  generate_board_feature_stats.rs  generate_boards.rs  main.rs  modes.rs  play.rs  record.rs  train_ai.rs  util.rs
crates/oxidris-cli/src/analysis/: feature_builder.rs  index.rs  mod.rs  normalization.rs  sample.rs  statistics.rs  survival.rs
crates/oxidris-cli/src/analyze_board_features/: analysis.rs  data.rs  index.rs  mod.rs
crates/oxidris-cli/src/analyze_board_features/ui/: app.rs  mod.rs
crates/oxidris-cli/src/analyze_board_features/ui/screens/: feature_list.rs  mod.rs
crates/oxidris-cli/src/command/: analyze_censoring.rs  generate_board_feature_stats.rs  generate_boards.rs  mod.rs  play.rs  replay.rs  train_ai.rs
crates/oxidris-cli/src/command/analyze_board_features/: app.rs  index.rs  mod.rs
crates/oxidris-cli/src/command/analyze_board_features/screens/: feature_list.rs  mod.rs
crates/oxidris-cli/src/command/analyze_board_features/ui/: app.rs  mod.rs
crates/oxidris-cli/src/command/analyze_board_features/ui/screens/: feature_list.rs
crates/oxidris-cli/src/command/analyze_censoring/: feature.rs  mod.rs  stats.rs  table.rs
crates/oxidris-cli/src/command/play/: app.rs  mod.rs
crates/oxidris-cli/src/command/play/screens/: auto.rs  manual.rs  mod.rs
crates/oxidris-cli/src/command/replay/: app.rs  mod.rs
crates/oxidris-cli/src/command/replay/app/screens/: mod.rs  turn_viewer.rs
crates/oxidris-cli/src/command/replay/screens/: mod.rs  turn_viewer.rs
crates/oxidris-cli/src/model/: ai_model.rs  km_normalization.rs  mod.rs  session.rs
crates/oxidris-cli/src/schema/: ai_model.rs  mod.rs  record.rs
crates/oxidris-cli/src/tui/: app.rs  event_loop.rs  mod.rs  runner.rs  screen.rs
crates/oxidris-cli/src/tune_metrics/: analysis.rs  data.rs  index.rs  mod.rs
crates/oxidris-cli/src/tune_metrics/ui/: app.rs  mod.rs
crates/oxidris-cli/src/tune_metrics/ui/screens/: metrics_list.rs  mod.rs
crates/oxidris-cli/src/ui/: renderer.rs
crates/oxidris-cli/src/ui/widgets/: block_display.rs  board_display.rs  mod.rs  piece_display.rs  piece_stack_display.rs  session_display.rs  session_stats_display.rs
crates/oxidris-cli/src/view/screens/: mod.rs  replay.rs
crates/oxidris-cli/src/view/widgets/: block_display.rs  board_display.rs  key_binding_display.rs  mod.rs  piece_display.rs  piece_stack_display.rs  session_display.rs  session_stats_display.rs
crates/oxidris-engine/: Cargo.toml
crates/oxidris-engine/src/: lib.rs
crates/oxidris-engine/src/core/: bit_board.rs  block_board.rs  mod.rs  piece.rs  render_board.rs
crates/oxidris-engine/src/engine/: game_field.rs  game_session.rs  game_stats.rs  mod.rs  piece_buffer.rs  piece_generator.rs  session.rs  state.rs
crates/oxidris-evaluator/: Cargo.toml
crates/oxidris-evaluator/src/: board_analysis.rs  lib.rs  (+4 more)
crates/oxidris-stats/: Cargo.toml
crates/oxidris-training/: Cargo.toml
crates/ratatui-runtime/: Cargo.toml
docs/: README.md  future-projects.md  normalization.md
docs/ai/: checkpoint-management.md  documentation-guidelines.md  review-process.md  when-to-ask.md
docs/architecture/: README.md
docs/engine/: implementation-notes.md
docs/evaluator/: README.md  current-status.md
models/ai/: aggro-km.json  aggro-raw.json  aggro.json  defensive-km.json  defensive-raw.json  defensive.json
scripts/: lint  validate-docs.sh
src/: ai.rs  block.rs  field.rs  ga.rs  game.rs  input.rs  main.rs  mino.rs  modes.rs  play.rs  renderer.rs  terminal.rs
src/ai/: evaluator.rs  genetic.rs  metrics.rs  mod.rs  turn_evaluator.rs  weights.rs
src/core/: bit_board.rs  block.rs  board.rs  mod.rs  piece.rs  render_board.rs
src/engine/: mod.rs  session.rs  state.rs
src/game/: core.rs  mod.rs  ui.rs
src/ui/: mod.rs  renderer.rs
(+38 files in other folders)
