[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "2.0.1", features = ["is_variant"] }
rand = "0.9.2"
rand_distr = "0.5.1"

[lints.clippy]
pedantic = "warn"
