[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
arrayvec = "0.7.6"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
derive_more = "2.0.1"
rand = "0.9.2"
rand_distr = "0.5.1"

oxidris-ai = { path = "crates/oxidris-ai" }
oxidris-engine = { path = "crates/oxidris-engine" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
