[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
arrayvec = "0.7.6"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4.42" }
crossterm = "0.29.0"
derive_more = "2.1.1"
rand = "0.9.2"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

oxidris-engine = { path = "crates/oxidris-engine" }
oxidris-evaluator = { path = "crates/oxidris-evaluator" }
oxidris-training = { path = "crates/oxidris-training" }
oxidris-stats = { path = "crates/oxidris-stats" }
ratatui-runtime = { path = "crates/ratatui-runtime" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
