[package]
name = "oxidris-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
crossterm.workspace = true
oxidris-ai.workspace = true
oxidris-engine.workspace = true
rand.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
